# rolet-web

./: .gitignore  CHECKPOINT-v0.1.md  DEMO-SCRIPT.md  HANDOFF.md  HANDOFF_REMAINING.md  PITCH.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/server/: .gitignore  Anchor.toml  package.json  tsconfig.anchor.json  tsconfig.json
apps/server/migrations/: deploy.ts
apps/server/programs/rolet/: Cargo.toml
apps/server/programs/rolet/src/: lib.rs
apps/server/scripts/: bootstrap-vault.ts
apps/server/src/: index.ts
apps/server/src/events/: socketHandlers.ts
apps/server/src/game/: BulletSystem.ts  CardSystem.ts  GameEngine.ts
apps/server/src/rooms/: RoomManager.ts
apps/server/tests/: rolet.ts
apps/web/: .env.example  package-lock.json  package.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/rpc/: route.ts
apps/web/app/duel/: page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/components/: DuelArena3D.tsx  HandRack3D.tsx  Nav.tsx  SolanaProvider.tsx
apps/web/hooks/: useRolet.ts  useSound.ts
apps/web/idl/: rolet.json  rolet_types.ts
