[package]
name = "rolet"
version = "0.1.0"
description = "ROLET — fully on-chain Russian Roulette duel for Solana + MagicBlock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rolet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["associated_token", "token"] }
# ephemeral-rollups-sdk removed — see PLAN_B note in lib.rs.
# Delegation is performed client-side via @magicblock-labs/ephemeral-rollups-sdk
# to avoid the dlp_api / solana-instruction version split.
